style:  Estilo imgs banner

--- a/src/pages/locacao-de-sistemas.html
+++ b/src/pages/locacao-de-sistemas.html
@@ -22,8 +22,8 @@
                         <p class="text-white m-0 text-base font-normal">A solução inteligente que une sustentabilidade, economia e praticidade está aqui.</p>
                         <button class="mt-8 btn bg-verde text-neutral-800 font-semibold">Solicitar Análise</button>
                     </span>
-                    <img class="absolute z-30 w-1/2 right-0 scale-75" src="../assets/img/placa-solar-transparente.png">
-                    <img class="absolute z-30 w-1/2 right-6 -top-8 scale-75" src="../assets/img/placa-solar-transparente.png">
+                    <img class="absolute z-30 -skew-x-6 w-1/2 scale-75 saturate-200 brightness-125 right-0" src="../assets/img/placa-solar-transparente.png">
+                    <img class="absolute z-30 -skew-x-6 w-1/2 scale-75 saturate-200 brightness-125 right-10 -top-8" src="../assets/img/placa-solar-transparente.png">
                     <div class="absolute z-20 rounded top-0 left-0 h-full w-full bg-gradient-to-r from-[#000000cc] to-[#0000002a]"></div>
                 </div>
             </section>
