style:  Ajustes de responsividade
- Imagens background ajustadas para lg: e 2xl:

--- a/src/pages/locacao-de-sistemas.html
+++ b/src/pages/locacao-de-sistemas.html
@@ -15,15 +15,15 @@
         </header>
         <main>
             <section class="bg-gradient-to-b from-verde from-80% to-white to-20% pt-16 mb-32">
-                <div class="conteudo grid-cols-2 p-20 rounded bg-agro-2 relative">
+                <div class="conteudo grid-cols-2 p-20 rounded bg-agro-2 bg-cover bg-center relative">
                     <span class="z-30">
                         <p class="text-white m-0 text-xl font-black mb-4">LOCAÇÃO DE SISTEMAS FOTOVOLTAICOS: A FAVOR DO MEIO AMBIENTE E DO SEU BOLSO</p>
                         <p class="text-white m-0 text-base font-extrabold">Precisa reduzir a conta de luz da sua empresa e otimizar investimentos?</p>
                         <p class="text-white m-0 text-base font-normal">A solução inteligente que une sustentabilidade, economia e praticidade está aqui.</p>
                         <button class="mt-8 btn bg-verde text-neutral-800 font-semibold">Solicitar Análise</button>
                     </span>
-                    <img class="absolute z-30 -skew-x-6 w-1/2 scale-75 saturate-200 brightness-125 right-0" src="../assets/img/placa-solar-transparente.png">
-                    <img class="absolute z-30 -skew-x-6 w-1/2 scale-75 saturate-200 brightness-125 right-10 -top-8" src="../assets/img/placa-solar-transparente.png">
+                    <img class="absolute z-30 -skew-x-6 w-1/2 scale-75 saturate-200 brightness-125 right-0 -top-0 2xl:scale-50 2xl:-top-28" src="../assets/img/placa-solar-transparente.png">
+                    <img class="absolute z-30 -skew-x-6 w-1/2 scale-75 saturate-200 brightness-125 right-8 -top-8 2xl:scale-50 2xl:-top-36" src="../assets/img/placa-solar-transparente.png">
                     <div class="absolute z-20 rounded top-0 left-0 h-full w-full bg-gradient-to-r from-[#000000cc] to-[#0000002a]"></div>
                 </div>
             </section>
@@ -137,8 +137,8 @@
             </section>
             <section class="py-20">
                 <div class="conteudo gap-12">
-                    <span class="flex bg-agro-2 p-8 rounded relative">
-                        <p class="z-20 text-2xl w-1/2 text-white font-extrabold my-16">Entenda como você começa a poupar desde a primeira conta.</p>
+                    <span class="flex bg-agro-2 bg-cover bg-center p-8 rounded relative">
+                        <p class="z-20 text-4xl w-1/2 text-white font-extrabold my-16">Entenda como você começa a poupar desde a primeira conta.</p>
                         <div class="z-10 absolute rounded top-0 left-0 h-full w-full bg-gradient-to-r from-[#000000cc] to-[#0000002a]"></div>
                     </span>
                     <span class="">
