perf:   Otimização de imagens
Pacotes adicionados:
- "image-minimizer-webpack-plugin": "^4.1.1", (em uso)
- "image-webpack-loader": "^8.1.0",
- "imagemin": "^9.0.0",
- "imagemin-mozjpeg": "^10.0.0",
- "imagemin-pngquant": "^10.0.0",
- "imagemin-webpack-plugin": "^2.4.2",

Imagens reduzidas e comprimidas no ILovePDF

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <header id="banner" class="sessao z-20 w-full overflow-hidden relative bg-img-banner bg-cover bg-center justify-end lg:h-dvh lg:max-h-dvh">
             <nav id="nav-logo" class="z-50 flex absolute top-0 w-full items-center min-h-20">
                 <div class="flex mx-auto justify-between w-5/6 lg:w-8/12">
-                    <!--<img class="h-14 col-span-2" src="./assets/img/logo-agro-e-solar-2.png" alt="">-->
+                    <!--<img class="h-14 col-span-2" src="./assets/img/logo-agro-e-solar-2.png" loading="lazy" alt="">-->
                     <ul class="justify-between items-center w-full hidden lg:flex">
                         <!--<li><a href="/">Inicio</a></li>-->
                         <li><a class="nav-link" href="#banner">Home</a></li>
@@ -45,7 +45,7 @@
             </div>
             <div class="coluna w-10/12 text-branco z-20 h-fit mx-auto">
                 <div class="coluna items-center justify-center mb-12">
-                    <img class="w-4/6 mb-6 img-sombra lg:w-4/12" src="./assets/img/logo-agro-e-solar-4.png" alt="">
+                    <img class="w-4/6 mb-6 img-sombra lg:w-4/12" src="./assets/img/logo-agro-e-solar-4.png" loading="lazy" alt="">
                     <h1 class="mb-2 text-center lg:w-2/3">Transforme a Luz do Sol em Economia</h1>
                     <p class="m-0 text-xs text-center lg:w-2/3 lg:text-sm">Reduza custos e potencialize seu negócio com soluções inteligentes. Transforme a luz do sol em economia significativa e uma operação mais ecológica, garantindo não apenas um futuro mais verde, mas também um presente mais eficiente e lucrativo.</p>
                 </div>
@@ -110,7 +110,7 @@
                 <span id="agrifotovoltaico" class="absolute -top-8"></span>
                 <container class="conteudo lg:grid-cols-2">
                     <div class="relative">
-                        <img src="./assets/img/engenheiro-com-placas.jpg" alt="" class="aspect-square scale-90 rounded-lg object-cover lg:scale-100" style="box-shadow:-20px 20px 0 #B3DE00;">
+                        <img src="./assets/img/engenheiro-com-placas.jpg" loading="lazy" alt="" class="aspect-square scale-90 rounded-lg object-cover lg:scale-100" style="box-shadow:-20px 20px 0 #B3DE00;">
                         <iconify-icon icon="lucide:chevrons-left" class="z-30 top-0 -right-8 text-9xl text-verde absolute"></iconify-icon>
                     </div>
                     <div class="coluna justify-center mt-8 lg:mt-0">
@@ -165,8 +165,8 @@
                         <p class="">Experimento financiado pelo governo do estado e realizado com ajuda da Universidade Federal de Alagoas – Centro de Ciências Agrárias.</p>
                         <p class="">Experimento agronômico em execução, já gerando energia.</p>
                     </div>
-                    <img src="./assets/img/ano_01.png" alt="" class="shadow-2xl lg:h-full lg:mb-24">
-                    <img src="./assets/img/ano_02.png" alt="" class="shadow-2xl lg:h-full lg:mb-24">
+                    <img src="./assets/img/ano_01.png" loading="lazy" alt="" class="shadow-2xl lg:h-full lg:mb-24">
+                    <img src="./assets/img/ano_02.png" loading="lazy" alt="" class="shadow-2xl lg:h-full lg:mb-24">
                     <h2 class="mt-24 font-extrabold mx-auto text-azul text-center lg:col-span-2">Aumente em mais de 10 vezes a lucratividade</h2>
                     <div class="w-full overflow-x-scroll lg:overflow-x-auto lg:col-span-2">
                         <table class="mx-0 w-full shadow-xl" cellspacing="0" cellpadding="5">
@@ -280,7 +280,7 @@
                         </table>
                     </div>
                     <h2 class="mt-16 text-center font-extrabold mx-auto lg:col-span-2">Fora o ganho com a geração de energia elétrica</h2>
-                    <img src="./assets/img/plantacao-cana-alagoas-grafico.png" alt="" class="w-full shadow-2xl mb-16 rounded-lg lg:col-span-2">
+                    <img src="./assets/img/plantacao-cana-alagoas-grafico.png" loading="lazy" alt="" class="w-full shadow-2xl mb-16 rounded-lg lg:col-span-2">
                     <span class="mb-4">
                         <p>Confira em detalhes toda analize dos resultados obtidos na pesquisa para desenvolvimento de todo o potencial nesse segmento, logo abaixo:</p>
                         <a class="mt-8" href="./assets/pdf/projeto_agrofotovoltaico_usina_santa_clotilde.pdf" target="_blank"><strong class="cursor-pointer text-azul">Projeto Usina SANTA CLOTILDE</strong></a>
@@ -291,7 +291,7 @@
                 <span id="locacao" class="absolute -top-8"></span>
                 <container class="conteudo lg:grid-cols-2">
                     <div>
-                        <img src="./assets/img/Projeto Smart Leme_3.jpg" alt="" class="aspect-square rounded-lg object-cover scale-90 lg:scale-100" style="box-shadow:-20px 20px 0 #B3DE00;">
+                        <img src="./assets/img/Projeto Smart Leme_3.jpg" loading="lazy" alt="" class="aspect-square rounded-lg object-cover scale-90 lg:scale-100" style="box-shadow:-20px 20px 0 #B3DE00;">
                     </div>
                     <div class="coluna justify-center">
                         <h2 class="flex items-center">
@@ -685,7 +685,7 @@
                         <!--<p>A Lupo é uma renomada fábrica brasileira especializada em meias, cuecas e roupas íntimas, reconhecida pela qualidade e inovação em seus produtos. Com sede no interior de São Paulo, a empresa tem se destacado no mercado nacional e internacional, priorizando sustentabilidade e eficiência em suas operações. Ao adotar soluções como sistemas agrifotovoltaicos, empresas como a Lupo podem reduzir custos com energia e reforçar seu compromisso com práticas ambientais responsáveis.</p>-->
                     </div>
                     <div>
-                        <img src="./assets/img/grande-projetos.png" alt="" class="aspect-square rounded-lg object-cover scale-90 lg:scale-100" style="box-shadow:20px 20px 0 #B3DE00;">
+                        <img src="./assets/img/grande-projetos.png" loading="lazy" alt="" class="aspect-square rounded-lg object-cover scale-90 lg:scale-100" style="box-shadow:20px 20px 0 #B3DE00;">
                     </div>
                 </container>
             </section>
@@ -693,7 +693,7 @@
                 <span id="seu-projeto" class="absolute -top-8"></span>
                 <container class="conteudo flex flex-col-reverse lg:grid-cols-2 lg:grid">
                     <div>
-                        <img src="./assets/img/pequeno-projetos.png" alt="" class="aspect-square rounded-lg object-cover scale-90 lg:scale-100" style="box-shadow:-20px 20px 0 #B3DE00;">
+                        <img src="./assets/img/pequeno-projetos.png" loading="lazy" alt="" class="aspect-square rounded-lg object-cover scale-90 lg:scale-100" style="box-shadow:-20px 20px 0 #B3DE00;">
                     </div>
                     <div class="coluna justify-center">
                         <h2 class="flex items-top">
@@ -848,32 +848,32 @@
                         <iconify-icon icon="fa:handshake-o" class="text-4xl mr-4"></iconify-icon>
                         Nosso Parceiro Integrador
                     </h2>
-                    <img src="./assets/img/logo-smart-ms.png" alt="" class="mb-12">
+                    <img src="./assets/img/logo-smart-ms.png" loading="lazy" alt="" class="mb-12">
                     <span class="flex items-center mb-12 lg:col-span-2">
                         <p>A <strong>Smart MS</strong> é uma parceira da Agro&Solar, colaborando para oferecer soluções completas em energia solar. Enquanto a Agro&Solar realiza estudos e prospecção de clientes, a Smart MS se especializa na instalação de sistemas fotovoltaicos, garantindo segurança e confiabilidade em seus serviços. Juntas, elas promovem a eficiência energética e a sustentabilidade, atendendo às necessidades tanto de residências quanto de empresas. Essa parceria reforça o compromisso com a qualidade e a satisfação do cliente.</p>
                     </span>
                     <span>
-                        <img src="./assets/img/img-smart-1.png" alt="" class="rounded-lg">
+                        <img src="./assets/img/img-smart-1.png" loading="lazy" alt="" class="rounded-lg">
                         <p class="mt-3 mb-0 text-xs lg:text-base">Projeto Empresarial - Rede Dom Pedro de postos <br> Cidade: Leme - SP</p>
                     </span>
                     <span>
-                        <img src="./assets/img/img-smart-2.png" alt="" class="rounded-lg">
+                        <img src="./assets/img/img-smart-2.png" loading="lazy" alt="" class="rounded-lg">
                         <p class="mt-3 mb-0 text-xs lg:text-base">Projeto Empresarial - Rede Dom Pedro de postos <br> Cidade: Estiva - MG</p>
                     </span>
                     <span>
-                        <img src="./assets/img/img-smart-3.png" alt="" class="rounded-lg">
+                        <img src="./assets/img/img-smart-3.png" loading="lazy" alt="" class="rounded-lg">
                         <p class="mt-3 mb-0 text-xs lg:text-base">Projeto Empresarial - Rede Dom Pedro de postos <br> Cidade: Bambuí - MG</p>
                     </span>
                     <span>
-                        <img src="./assets/img/img-smart-4.png" alt="" class="rounded-lg">
+                        <img src="./assets/img/img-smart-4.png" loading="lazy" alt="" class="rounded-lg">
                         <p class="mt-3 mb-0 text-xs lg:text-base">Projeto Empresarial - Rede Dom Pedro de postos <br> Cidade: Atibaia - SP</p>
                     </span>
                     <span>
-                        <img src="./assets/img/img-smart-5.png" alt="" class="rounded-lg">
+                        <img src="./assets/img/img-smart-5.png" loading="lazy" alt="" class="rounded-lg">
                         <p class="mt-3 mb-0 text-xs lg:text-base">Projeto Empresarial - Rede Dom Pedro de postos <br> Cidade: Pouso Alegre - MG</p>
                     </span>
                     <span>
-                        <img src="./assets/img/img-smart-6.png" alt="" class="rounded-lg">
+                        <img src="./assets/img/img-smart-6.png" loading="lazy" alt="" class="rounded-lg">
                         <p class="mt-3 mb-0 text-xs lg:text-base">Projeto Empresarial - Rede Dom Pedro de postos <br> Cidade: Pouso Alegre - MG</p>
                     </span>
                 </container>
@@ -953,7 +953,7 @@
         </main>
         <footer class="text-center bg-preto">
             <section class="py-8 px-0">
-                <img src="./assets/img/logo-agro-e-solar-2.png" alt="" class="h-12 mx-auto mb-4">
+                <img src="./assets/img/logo-agro-e-solar-2.png" loading="lazy" alt="" class="h-12 mx-auto mb-4">
                 <h4 class="font-normal m-0 text-cinza-claro">
                     <strong class="text-verde">Agro&Solar</strong> 2024 - Todos os direitos reservados. São Paulo - SP
                 </h4>
