--- a/src/pages/locacao-de-sistemas.html
+++ b/src/pages/locacao-de-sistemas.html
@@ -15,49 +15,47 @@
         </header>
         <main>
             <section class="bg-gradient-to-b from-verde from-80% to-white to-20% pt-16 mb-32">
-                <div class="conteudo grid-cols-2 p-20 rounded bg-agro-2 bg-cover bg-center relative">
+                <div class="conteudo grid-cols-2 p-12 rounded bg-agro-2 bg-cover bg-center relative">
                     <span class="z-30">
-                        <p class="text-white m-0 text-xl font-black mb-4">LOCAÇÃO DE SISTEMAS FOTOVOLTAICOS: A FAVOR DO MEIO AMBIENTE E DO SEU BOLSO</p>
-                        <p class="text-white m-0 text-base font-extrabold">Precisa reduzir a conta de luz da sua empresa e otimizar investimentos?</p>
-                        <p class="text-white m-0 text-base font-normal">A solução inteligente que une sustentabilidade, economia e praticidade está aqui.</p>
+                        <p class="text-white m-0 text-xl font-black mb-4 2xl:text-2xl">LOCAÇÃO DE SISTEMAS FOTOVOLTAICOS: A FAVOR DO MEIO AMBIENTE E DO SEU BOLSO</p>
+                        <p class="text-white m-0 text-sm font-extrabold 2xl:text-base">Precisa reduzir a conta de luz da sua empresa e otimizar investimentos?</p>
+                        <p class="text-white m-0 text-sm font-normal 2xl:text-base">A solução inteligente que une sustentabilidade, economia e praticidade está aqui.</p>
                         <button class="mt-8 btn bg-verde text-neutral-800 font-semibold">Solicitar Análise</button>
                     </span>
-                    <img class="absolute z-30 -skew-x-6 w-1/2 scale-75 saturate-200 brightness-125 right-0 -top-0 2xl:scale-50 2xl:-top-28" src="../assets/img/placa-solar-transparente.png">
-                    <img class="absolute z-30 -skew-x-6 w-1/2 scale-75 saturate-200 brightness-125 right-8 -top-8 2xl:scale-50 2xl:-top-36" src="../assets/img/placa-solar-transparente.png">
+                    <img class="absolute z-30 -skew-x-6 w-1/2 scale-75 saturate-200 brightness-125 right-0 -top-0 2xl:scale-50 2xl:-top-24" src="../assets/img/placa-solar-transparente.png">
+                    <img class="absolute z-30 -skew-x-6 w-1/2 scale-75 saturate-200 brightness-125 right-8 -top-8 2xl:scale-50 2xl:-top-32" src="../assets/img/placa-solar-transparente.png">
                     <div class="absolute z-20 rounded top-0 left-0 h-full w-full bg-gradient-to-r from-[#000000cc] to-[#0000002a]"></div>
                 </div>
             </section>
             <section class="py-20">
-                <div class="conteudo grid-cols-2">
-                    <div>
-                        <p class="text-2xl mb-8 text-verde-escuro font-extrabold">Economize com energia solar enquanto conquista ganhos financeiros significativos.</p>
-                        <p class="text-base">Com a Agro&Solar, você conta com um modelo de locação inovador: cuidamos de todo o processo –  da instalação à manutenção dos sistemas fotovoltaicos –, sem custo inicial para o seu negócio.</p>
-                        <p class="text-base">Como os equipamentos são fornecidos por nós, você pode usufruir dos benefícios da energia solar sem necessidade de compra.</p>
-                        <p class="text-base">Tudo de acordo com as normas da ANEEL (Agência Nacional de Energia Elétrica), garantindo conformidade e segurança. E o melhor: os sistemas fotovoltaicos promovem a sustentabilidade do planeta, reduzindo a pegada de carbono da sua operação.</p>
+                <div class="conteudo grid-cols-5">
+                    <div class="col-span-3">
+                        <p class="text-xl mb-8 text-verde-escuro font-extrabold 2xl:text-2xl">Economize com energia solar enquanto conquista ganhos financeiros significativos.</p>
+                        <p class="text-sm 2xl:text-base">Com a Agro&Solar, você conta com um modelo de locação inovador: cuidamos de todo o processo –  da instalação à manutenção dos sistemas fotovoltaicos –, sem custo inicial para o seu negócio.</p>
+                        <p class="text-sm 2xl:text-base">Como os equipamentos são fornecidos por nós, você pode usufruir dos benefícios da energia solar sem necessidade de compra.</p>
+                        <p class="text-sm 2xl:text-base">Tudo de acordo com as normas da ANEEL (Agência Nacional de Energia Elétrica), garantindo conformidade e segurança. E o melhor: os sistemas fotovoltaicos promovem a sustentabilidade do planeta, reduzindo a pegada de carbono da sua operação.</p>
                     </div>
-                    <div>
+                    <div class="col-span-2">
                         <img src="../assets/img/sobre-2.jpg" class="aspect-square object-cover rounded" alt="">
                     </div>
                 </div>
             </section>
             <section class="py-20">
-                <div class="conteudo grid-cols-2">
-                    <div>
+                <div class="conteudo grid-cols-5">
+                    <div class="col-span-2">
                         <img src="../assets/img/sobre-2.jpg" class="aspect-square object-cover rounded" alt="">
                     </div>
-                    <div>
-                        <p class="text-2xl mb-8 text-verde-escuro font-extrabold">Tenha um retorno financeiro estável e previsível com a locação de energia solar.</p>
-                        <p class="text-base">Como a taxa mensal cobrada pela locação de energia solar é geralmente menor do que o custo da energia elétrica fornecida pela rede pública de distribuição de energia, você pode esperar receber um fluxo constante de receita ao longo do contrato de locação.</p>
-                        <p class="text-base">Isso permite que você aproveite uma redução imediata na sua conta de energia e benefícios financeiros a longo prazo.</p>
-                        <span class="flex flex-col items-start mt-12">
-                            <p class="text-base">Tem interesse em alugar energia solar?</p>
-                            <button class="btn bg-verde text-neutral-800 font-semibold">Solicitar Análise</button>
-                        </span>
+                    <div class="col-span-3">
+                        <p class="text-xl mb-8 text-verde-escuro font-extrabold 2xl:text-2xl">Tenha um retorno financeiro estável e previsível com a locação de energia solar.</p>
+                        <p class="text-sm 2xl:text-base">Como a taxa mensal cobrada pela locação de energia solar é geralmente menor do que o custo da energia elétrica fornecida pela rede pública de distribuição de energia, você pode esperar receber um fluxo constante de receita ao longo do contrato de locação.</p>
+                        <p class="text-sm 2xl:text-base">Isso permite que você aproveite uma redução imediata na sua conta de energia e benefícios financeiros a longo prazo.</p>
+                        <p class="text-sm 2xl:text-base">Tem interesse em alugar energia solar?</p>
+                        <button class="btn bg-verde text-neutral-800 font-semibold">Solicitar Análise</button>
                     </div>
                 </div>
             </section>
             <section class="py-20">
-                <p class="conteudo text-2xl mb-8 text-verde-escuro font-extrabold text-center">Por que escolher a locação de sistemas da Agro&Solar?</p>
+                <p class="conteudo text-xl mb-8 text-verde-escuro font-extrabold text-center 2xl:text-2xl">Por que escolher a locação de sistemas da Agro&Solar?</p>
                 <div class="conteudo grid-cols-3">
                     <div>
                         <img src="../assets/img/sobre-2.jpg" class="h-full object-cover rounded scale-y-75 shadow" alt="">
@@ -138,44 +136,44 @@
             <section class="py-20">
                 <div class="conteudo gap-12">
                     <span class="flex bg-agro-2 bg-cover bg-center p-8 rounded relative">
-                        <p class="z-20 text-4xl w-1/2 text-white font-extrabold my-16">Entenda como você começa a poupar desde a primeira conta.</p>
+                        <p class="z-20 text-3xl w-1/2 text-white font-extrabold my-16">Entenda como você começa a poupar desde a primeira conta.</p>
                         <div class="z-10 absolute rounded top-0 left-0 h-full w-full bg-gradient-to-r from-[#000000cc] to-[#0000002a]"></div>
                     </span>
                     <span class="">
-                        <p class="text-xl font-extrabold m-0">Entenda como você começa a poupar desde a primeira conta.</p>
+                        <p class="text-xl font-extrabold m-0">EXEMPLO: Empresa com Gastos de R$ 12.000 Mensais em Energia</p>
                         <ul>
-                            <li class="list-disc ml-8 m-0 text-base font-semibold">Cenário Inicial: gasto mensal de R$ 12.000 (R$ 144.000 por ano) com eletricidade.</li>
-                            <li class="list-disc ml-8 m-0 text-base font-semibold">Modelo de Locação: a empresa contrata o serviço de locação de energia solar sem custos iniciais de instalação.</li>
+                            <li class="list-disc ml-8 m-0 text-sm font-semibold 2xl:text-base">Cenário Inicial: gasto mensal de R$ 12.000 (R$ 144.000 por ano) com eletricidade.</li>
+                            <li class="list-disc ml-8 m-0 text-sm font-semibold 2xl:text-base">Modelo de Locação: a empresa contrata o serviço de locação de energia solar sem custos iniciais de instalação.</li>
                         </ul>
                     </span>
                     <span class="mb-8">
                         <div class="conteudo w-full grid-cols-2 gap-y-8 gap-x-16">
                             <p class="col-span-2 text-xl font-extrabold m-0">Benefícios da Locação</p>
                             <div class="flex flex-col">
-                                <p class="text-base mb-2 text-verde-escuro font-extrabold">1. Redução Imediata na Conta de Luz:</p>
+                                <p class="text-sm mb-2 text-verde-escuro font-extrabold 2xl:text-base">1. Redução Imediata na Conta de Luz:</p>
                                 <ul class="ml-8">
-                                    <li class="list-disc m-0 text-sm">Economia anual estimada: R$ 24.000 (cerca de 20% do valor gasto).</li>
-                                    <li class="list-disc m-0 text-sm">Após 20 anos, economia acumulada sem correção: R$ 480.000.</li>
+                                    <li class="list-disc m-0 text-sm 2xl:text-base">Economia anual estimada: R$ 24.000 (cerca de 20% do valor gasto).</li>
+                                    <li class="list-disc m-0 text-sm 2xl:text-base">Após 20 anos, economia acumulada sem correção: R$ 480.000.</li>
                                 </ul>
                             </div>
                             <div class="flex flex-col">
-                                <p class="text-base mb-2 text-verde-escuro font-extrabold">2. Investimento Sustentável:</p>
+                                <p class="text-sm mb-2 text-verde-escuro font-extrabold 2xl:text-base">2. Investimento Sustentável:</p>
                                 <ul class="ml-4">
-                                    <li class="list-disc m-0 text-sm">Redução significativa da dependência de energia de fontes não renováveis.</li>
-                                    <li class="list-disc m-0 text-sm">Contribuição para a sustentabilidade e diminuição da pegada de carbono.</li>
+                                    <li class="list-disc m-0 text-sm 2xl:text-base">Redução significativa da dependência de energia de fontes não renováveis.</li>
+                                    <li class="list-disc m-0 text-sm 2xl:text-base">Contribuição para a sustentabilidade e diminuição da pegada de carbono.</li>
                                 </ul>
                             </div>
                             <div class="flex flex-col">
-                                <p class="text-base mb-2 text-verde-escuro font-extrabold">3. Facilidade na Gestão:</p>
+                                <p class="text-sm mb-2 text-verde-escuro font-extrabold 2xl:text-base">3. Facilidade na Gestão:</p>
                                 <ul class="ml-4">
-                                    <li class="list-disc m-0 text-sm">Sem custos de manutenção ou substituição de equipamentos.</li>
-                                    <li class="list-disc m-0 text-sm">A empresa fornecedora cuida de toda a documentação e suporte técnico.</li>
+                                    <li class="list-disc m-0 text-sm 2xl:text-base">Sem custos de manutenção ou substituição de equipamentos.</li>
+                                    <li class="list-disc m-0 text-sm 2xl:text-base">A empresa fornecedora cuida de toda a documentação e suporte técnico.</li>
                                 </ul>
                             </div>
                             <div class="flex flex-col">
-                                <p class="text-base mb-2 text-verde-escuro font-extrabold">4. Economia Acumulada com Correção (1% ao mês):</p>
+                                <p class="text-sm mb-2 text-verde-escuro font-extrabold 2xl:text-base">4. Economia Acumulada com Correção (1% ao mês):</p>
                                 <ul class="ml-4">
-                                    <li class="list-disc m-0 text-sm">Com os valores economizados aplicados a 12% ao  ano, o montante pode ultrapassar R$ 356.000  ao longo de 20 anos, proporcionando um lucro significativo além da economia nas contas de luz.</li>
+                                    <li class="list-disc m-0 text-sm 2xl:text-base">Com os valores economizados aplicados a 12% ao  ano, o montante pode ultrapassar R$ 356.000  ao longo de 20 anos, proporcionando um lucro significativo além da economia nas contas de luz.</li>
                                 </ul>
                             </div>
                         </div>
